# Rust_Fullstack_Core

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: tailwind.css
migrations/: 001_add_employee_id_to_users.sql  002_seed_initial_users.sql  DATABASE_SETUP.md  README.md  setup_database.sql  triggers.sql
src/: api.rs  app.rs  db.rs  db_connection.rs  main.rs
src/components/: employee_modal.rs  employees.rs  footer.rs  header.rs  home.rs  login.rs  mod.rs  user_modal.rs  users.rs
src/entities/: app_role.rs  employee.rs  mod.rs  prelude.rs  users.rs
src/server/: db.rs  db_connection.rs  mod.rs  state.rs
