[package]
name = "rust-fullstack-core"
version = "0.1.0"
authors = ["Thorsten Fey"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
# sqlx = { version = "0.7.0", features = ["postgres"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
