[package]
name = "rust-fullstack-core"
version = "0.1.0"
authors = ["Thorsten Fey"]
edition = "2024"
description = "Dioxus Fullstack App with PostgreSQL and Axum backend"
license = "MIT"

[dependencies]
# --- Dioxus ---
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
# In der [dependencies] Sektion:
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], optional = true }
# --- Web / Server ---
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Database ---
dotenvy = "0.15"

# --- Authentication ---
jsonwebtoken = { version = "9", optional = true, default-features = false }
bcrypt = { version = "0.16", optional = true }

# --- Error handling ---
anyhow = "1.0"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# --- Misc ---
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
sea-orm-cli = { version = "1.1.5" }

[features]
# Default build: frontend only
default = ["web"]

# Frontend targets
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]

# Backend/server target
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:sea-orm",
    "dep:axum",
    "dep:hyper",
    "dep:jsonwebtoken",
    "dep:bcrypt"
]
